sample-app/solutions/ads/ads-app-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ads-app-ingress
  labels:
    component: ads
    module: app
    garden.sapcloud.io/purpose: managed-cert
spec:
  rules:
  - host: <Hostname>.ingress.<CLUSTER_NAME>.<PROJECT_NAME>.shoot.canary.k8s-hana.ondemand.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ads-app-service
            port:
              name: http
  tls:
    - hosts:
      - <Hostname>.ingress.<CLUSTER_NAME>.<PROJECT_NAME>.shoot.canary.k8s-hana.ondemand.com
      secretName: ads-tls-secret
