sample-app/solutions/ads/ads-app-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ads-app-access
  labels:
    component: ads
    module: app
spec:
  podSelector:
    matchLabels:
      component: ads
      module: app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx-ingress
          component: controller
          origin: gardener
      namespaceSelector:
        matchLabels:
          gardener.cloud/purpose: kube-system
  egress:
  - to:
    - podSelector:
        matchLabels:
          component: ads
          module: db
    - podSelector:
        matchLabels:
          component: reviews
          module: app
  - to:
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
      namespaceSelector:
        matchLabels:
          gardener.cloud/purpose: kube-system
    ports:
    - port: 8053
      protocol: UDP
    - port: 8053
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          gardener.cloud/purpose: kube-system
      podSelector:
        matchLabels:
          k8s-app: node-local-dns
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
